--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
      <link rel="shortcut icon" href="https://ik.imagekit.io/2lzi3lqgg/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Hariom Bamboriya</title>
   </head>
   <body class=" dark">
     <div id="root"></div>
